{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 213,
  "lineage": "bb4fb9c2-3a4a-ffd4-2947-688964025556",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e8cad22d9ae83d5b",
            "domain": "vpc",
            "id": "eipalloc-03ddf66de82ae6bba",
            "network_border_group": "us-east-1",
            "network_interface": "eni-002d19da1805ff8ff",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-100-24-111-251.compute-1.amazonaws.com",
            "public_ip": "100.24.111.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cd3e58305da77911",
            "domain": "vpc",
            "id": "eipalloc-0cc3b5c624a15e973",
            "network_border_group": "us-east-1",
            "network_interface": "eni-058e2c9f71f099608",
            "private_dns": "ip-10-0-2-181.ec2.internal",
            "private_ip": "10.0.2.181",
            "public_dns": "ec2-3-225-87-135.compute-1.amazonaws.com",
            "public_ip": "3.225.87.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:530744969948:loadbalancer/elb-ws",
            "availability_zones": [
              "us-east-1a",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-ws-577235284.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb-ws",
            "idle_timeout": 60,
            "instances": [
              "i-06da9b5357ded58f3",
              "i-0fa0aa8da63bd14ff",
              "i-0fb4f5803e93e3a4d",
              "i-0fdd96756a21198d7"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb-ws",
            "security_groups": [
              "sg-0ca712ba4ecb11237"
            ],
            "source_security_group": "530744969948/default",
            "source_security_group_id": "sg-0ca712ba4ecb11237",
            "subnets": [
              "subnet-04b8adb6521c16dd4",
              "subnet-076d9f48d86cca123"
            ],
            "tags": {
              "Name": "elb_ws"
            },
            "tags_all": {
              "Name": "elb_ws"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.ws_1",
            "aws_instance.ws_2",
            "aws_instance.ws_3",
            "aws_instance.ws_4",
            "aws_security_group.asg_ws",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ws_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:530744969948:instance/i-06da9b5357ded58f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06da9b5357ded58f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b922e0dfd6133db4",
            "private_dns": "ip-10-0-1-210.ec2.internal",
            "private_ip": "10.0.1.210",
            "public_dns": "ec2-3-87-81-218.compute-1.amazonaws.com",
            "public_ip": "3.87.81.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0a33b99afb53730",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b8adb6521c16dd4",
            "tags": {
              "Name": "ws_1"
            },
            "tags_all": {
              "Name": "ws_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a68785416ce6eb0"
            ]
          },
          "dependencies": [
            "aws_security_group.asg_ws",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ws_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:530744969948:instance/i-0fb4f5803e93e3a4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb4f5803e93e3a4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0843f2265d9c21f01",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-54-221-48-236.compute-1.amazonaws.com",
            "public_ip": "54.221.48.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d4959ece009d5b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b8adb6521c16dd4",
            "tags": {
              "Name": "ws_2"
            },
            "tags_all": {
              "Name": "ws_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a68785416ce6eb0"
            ]
          },
          "dependencies": [
            "aws_security_group.asg_ws",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ws_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:530744969948:instance/i-0fdd96756a21198d7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdd96756a21198d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1be04d8ed9eeabf",
            "private_dns": "ip-10-0-2-182.ec2.internal",
            "private_ip": "10.0.2.182",
            "public_dns": "ec2-3-237-182-71.compute-1.amazonaws.com",
            "public_ip": "3.237.182.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5c01191f360cb85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076d9f48d86cca123",
            "tags": {
              "Name": "ws_3"
            },
            "tags_all": {
              "Name": "ws_3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a68785416ce6eb0"
            ]
          },
          "dependencies": [
            "aws_security_group.asg_ws",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ws_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:530744969948:instance/i-0fa0aa8da63bd14ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa0aa8da63bd14ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7ecb6622c997abb",
            "private_dns": "ip-10-0-2-77.ec2.internal",
            "private_ip": "10.0.2.77",
            "public_dns": "ec2-34-200-220-163.compute-1.amazonaws.com",
            "public_ip": "34.200.220.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e755d7485185d10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076d9f48d86cca123",
            "tags": {
              "Name": "ws_4"
            },
            "tags_all": {
              "Name": "ws_4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a68785416ce6eb0"
            ]
          },
          "dependencies": [
            "aws_security_group.asg_ws",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:internet-gateway/igw-0047351fc1924cb3b",
            "id": "igw-0047351fc1924cb3b",
            "owner_id": "530744969948",
            "tags": {
              "Name": "igw_vpc10"
            },
            "tags_all": {
              "Name": "igw_vpc10"
            },
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_pub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ddf66de82ae6bba",
            "connectivity_type": "public",
            "id": "nat-0eadac1e692b86d6f",
            "network_interface_id": "eni-002d19da1805ff8ff",
            "private_ip": "10.0.1.55",
            "public_ip": "100.24.111.251",
            "subnet_id": "subnet-04b8adb6521c16dd4",
            "tags": {
              "Name": "ngw_pub_1"
            },
            "tags_all": {
              "Name": "ngw_pub_1"
            }
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw_vpc10",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_pub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc3b5c624a15e973",
            "connectivity_type": "public",
            "id": "nat-05749f819e7124f57",
            "network_interface_id": "eni-058e2c9f71f099608",
            "private_ip": "10.0.2.181",
            "public_ip": "3.225.87.135",
            "subnet_id": "subnet-076d9f48d86cca123",
            "tags": {
              "Name": "ngw_pub_2"
            },
            "tags_all": {
              "Name": "ngw_pub_2"
            }
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw_vpc10",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:route-table/rtb-0854c1e141c898a0e",
            "id": "rtb-0854c1e141c898a0e",
            "owner_id": "530744969948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.3.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eadac1e692b86d6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_priv_1a"
            },
            "tags_all": {
              "Name": "rt_priv_1a"
            },
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw_vpc10",
            "aws_nat_gateway.ngw_pub_1",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:route-table/rtb-0d87a1c47685babe6",
            "id": "rtb-0d87a1c47685babe6",
            "owner_id": "530744969948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.4.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05749f819e7124f57",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_priv_1c"
            },
            "tags_all": {
              "Name": "rt_priv_1c"
            },
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw_vpc10",
            "aws_nat_gateway.ngw_pub_2",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:route-table/rtb-0b70a2587fe724544",
            "id": "rtb-0b70a2587fe724544",
            "owner_id": "530744969948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0047351fc1924cb3b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_pub"
            },
            "tags_all": {
              "Name": "rt_pub"
            },
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_pub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06536ccddd7ba11bb",
            "route_table_id": "rtb-0854c1e141c898a0e",
            "subnet_id": "subnet-023373ad2f3dbd87d"
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw_vpc10",
            "aws_nat_gateway.ngw_pub_1",
            "aws_route_table.rt_priv_1a",
            "aws_subnet.sn_vpc10_priv_1a",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a16e01caf76c9c82",
            "route_table_id": "rtb-0d87a1c47685babe6",
            "subnet_id": "subnet-0d7c3ff6ebac9fa50"
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw_vpc10",
            "aws_nat_gateway.ngw_pub_2",
            "aws_route_table.rt_priv_1c",
            "aws_subnet.sn_vpc10_priv_1c",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faba0f445c37da12",
            "route_table_id": "rtb-0b70a2587fe724544",
            "subnet_id": "subnet-04b8adb6521c16dd4"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.rt_pub",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba43dd07d34af024",
            "route_table_id": "rtb-0b70a2587fe724544",
            "subnet_id": "subnet-076d9f48d86cca123"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.rt_pub",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:security-group/sg-0e85fbad5c9459694",
            "description": "Security Group dos bancos de dados",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e85fbad5c9459694",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "Liberando entrada das EC2 Webserver",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_rds",
            "name_prefix": "",
            "owner_id": "530744969948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg_rds"
            },
            "tags_all": {
              "Name": "asg_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:security-group/sg-03a68785416ce6eb0",
            "description": "Security Group das instancias EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a68785416ce6eb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP/80 from All",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_instance",
            "name_prefix": "",
            "owner_id": "530744969948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg_ws"
            },
            "tags_all": {
              "Name": "asg_ws"
            },
            "timeouts": null,
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:subnet/subnet-023373ad2f3dbd87d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-023373ad2f3dbd87d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "530744969948",
            "tags": {
              "Name": "sn_vpc10_priv_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1a"
            },
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:subnet/subnet-0d7c3ff6ebac9fa50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d7c3ff6ebac9fa50",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "530744969948",
            "tags": {
              "Name": "sn_vpc10_priv_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1c"
            },
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:subnet/subnet-04b8adb6521c16dd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04b8adb6521c16dd4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "530744969948",
            "tags": {
              "Name": "sn_vpc10_pub_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1a"
            },
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:subnet/subnet-076d9f48d86cca123",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-076d9f48d86cca123",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "530744969948",
            "tags": {
              "Name": "sn_vpc10_pub_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1c"
            },
            "vpc_id": "vpc-061b5d6ca91627ba5"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:vpc/vpc-061b5d6ca91627ba5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0448a08bc9c7db99a",
            "default_route_table_id": "rtb-03f03cbb25c1718c2",
            "default_security_group_id": "sg-0ca712ba4ecb11237",
            "dhcp_options_id": "dopt-00ac8ee1962f76c1a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-061b5d6ca91627ba5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03f03cbb25c1718c2",
            "owner_id": "530744969948",
            "tags": {
              "Name": "vpc10"
            },
            "tags_all": {
              "Name": "vpc10"
            }
          }
        }
      ]
    }
  ]
}